// DBML schema for: Нішева крамниця крафтових соусів
// Entities: customers, categories, products, orders, order_items
// Primary keys, foreign keys, not null constraints, unique email, enum for status

Enum order_status {
  processing
  shipped
  cancelled
  completed
}

Table customers {
  id int [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [not null, unique]
  registered_at datetime [not null]
}

Table categories {
  id int [pk, increment]
  name varchar(255) [not null]
  description text
}

Table products {
  id int [pk, increment]
  name varchar(255) [not null]
  price decimal(10,2) [not null]
  category_id int [not null, ref: > categories.id]
}

Table orders {
  id int [pk, increment]
  customer_id int [not null, ref: > customers.id]
  order_date datetime [not null]
  status order_status [not null]
}

Table order_items {
  id int [pk, increment]
  order_id int [not null, ref: > orders.id]
  product_id int [not null, ref: > products.id]
  quantity int [not null]
  price_at_purchase decimal(10,2) [not null]
}

// Indexes (optional but recommended)
Index customers_email_idx on customers (email)
Index products_category_idx on products (category_id)
Index orders_customer_idx on orders (customer_id)
Index order_items_order_idx on order_items (order_id)
